# Boid-Algorithm

./: .gitignore  CMakeLists.txt  example_boids.cpp
include/: Boid.h  Flock.h  Quadtree.h
src/: Boid.cpp  Flock.cpp  Quadtree.cpp
